--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -16,4 +16,10 @@
       </tr>
     </tbody>
   </table>
+
+  <h1>Book List
+    <a [routerLink]="['/book-create']" class="btn btn-default btn-lg">
+      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+    </a>
+  </h1>
 </div>
