--- a/src/app/book-detail/book-detail.component.html
+++ b/src/app/book-detail/book-detail.component.html
@@ -13,3 +13,9 @@
     <dd>{{book.updated_at}}</dd>
   </dl>
 </div>
+
+<div class="row">
+  <div class="col-md-12">
+    <a [routerLink]="['/book-edit', book.id]" class="btn btn-success">EDIT</a>
+  </div>
+</div>
