--- a/src/app/book-detail/book-detail.component.html
+++ b/src/app/book-detail/book-detail.component.html
@@ -16,6 +16,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <a [routerLink]="['/book-edit', book.id]" class="btn btn-success">EDIT</a>
+    <a [routerLink]="['/book-edit', book._id]" class="btn btn-success">EDIT</a>
+    <button class="btn btn-danger" type="button" (click)="deleteBook(book._id)">DELETE</button>
   </div>
 </div>
